# AI-Agents-Intensive-Vibe-Coding-Capstone-Project

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: AI Agents - Intensive Vibe Coding Capstone Project - description.docx  PROJECT_PLAN.md  architecture.md  benchmark_cases.md  core_tools.md  demo_script.md  evidence_matrix.md  github_pages.md  index.html  kaggle_writeup_draft.md  kaggle_writeup_final.md  mcp_server.md  security.md  submission_bundle.md  submission_checklist.md  video_plan.md  video_script_final.md
examples/cases/: README.md
examples/cases/clean_baseline/: README.md  case.json  experiment.py
examples/cases/data_leakage/: README.md  case.json  experiment.py  toy_leakage.csv
examples/cases/metric_mismatch/: README.md  case.json  experiment.py
examples/cases/missing_dependency/: README.md  case.json  experiment.py
examples/cases/seed_instability/: README.md  case.json  experiment.py
reports/sample/: README.md
reports/sample/benchmark/: benchmark_summary.json  benchmark_summary.md
reports/sample/dashboard/: index.html
reports/sample/data_leakage/: report.json  report.md
scripts/: run_demo.sh
src/reprobench/: __init__.py  __main__.py  cli.py  models.py
src/reprobench/agents/: __init__.py  workflow.py
src/reprobench/benchmark/: __init__.py  cases.py
src/reprobench/mcp_server/: __init__.py  (+3 more)
tests/: __init__.py
tests/integration/: test_cli.py
tests/unit/: test_cases.py  test_mcp_tools.py  test_reporting.py  test_security.py  test_tools.py  test_workflow.py
(+13 files in other folders)
